# bioinf_final_project

./: .gitignore  README.md  config.yaml  explore.py  main.py  pyproject.toml  requirements.txt  simple_test.py  structure.txt  test_config.py  utils.py  verification_script.py
configs/: model_confit.yaml
data/: clean_noise.py  coverage_analyzer.py  extract_protein_features.py  features.py  loader.py  preprocess.py  preprocess_ppi.py  run.py
data/processed_data/: ppi_visualizer.py  process_ppi_id.py
data/raw/: README.md
docs/: data_description.md
evaluation/: analysis.py  metrics.py
experiments/ppi_link_prediction_test_20250528_195440/: config.yaml  evaluation_report.txt  topology_report.txt  training_history.json
experiments/ppi_link_prediction_test_20250528_205759/: config.yaml  evaluation_report.txt  prediction_patterns_report.txt  training_history.json
final/: README.md  bio_validation.py  data_loader.py  evaluate.py  feature_engineering.py  main.py  models.py  train.py  visualize.py
final/results/reports/: evaluation_report.md  prediction_patterns_report.md  topology_report.md
models/: gnn.py  train.py
scripts/: preprocess.md  preprocess_data.py
src/data/: dataloader.py  feature_engineering.py  preprocessing.py
visualization/: plots.py  ppi_visualizer.py
