[project]
name = "mmu-ppi-gvae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.85",
    "dgl>=0.1.3",
    "goatools>=1.4.12",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
]
